<resources>
    <string name="app_name">NoteManagementSystem_01</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Note Management System</string>
    <string name="nav_header_subtitle">hieuvokt123@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_catelory">Catelory</string>
    <string name="string_priority">Priority</string>
    <string name="string_edit_profile">Edit Profile</string>
    <string name="string_change_password">Change password</string>
</resources>