<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_catelory" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/string_priority" />
        <item
            android:id="@+id/nav_status"
            android:icon="@drawable/icon_menu_manage"
            android:title="Status" />
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/icon_menu_manage"
            android:title="Note" />
    </group>


    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_editProfile"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/string_edit_profile"/>
            <item
                android:id="@+id/nav_changePassword"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/string_change_password"/>

        </menu>
    </item>
</menu>